[project]
name = "trust-safety-audit-env"
version = "1.0.0"
description = "OpenEnv Trust & Safety Audit Environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "openenv-core==0.2.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "openai>=1.30.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
